# legacy

./: .travis.yml  README.md
.github/workflows/: ci.yml
legacy-serde/legacy-serde-0.6/: Cargo.toml
legacy-serde/legacy-serde-0.7/: Cargo.toml
legacy-serde/legacy-serde-0.8/: Cargo.toml
legacy-serde/legacy-serde-0.9/: Cargo.toml
serde06/: Cargo.toml
serde06/src/: lib.rs
serde07/: Cargo.toml
serde08/: Cargo.toml
serde09/: Cargo.toml
serde1/: Cargo.toml
