[package]
name = "serde06"
version = "0.6.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Re-export of serde::*"
repository = "https://github.com/serde-rs/legacy"
keywords = ["serde"]
include = ["Cargo.toml", "src/lib.rs", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = { version = "0.6", default-features = false }

[features]
nightly = ["serde/nightly"]
nightly-testing = ["serde/nightly-testing"]
num-bigint = ["serde/num-bigint"]
num-complex = ["serde/num-complex"]
num-impls = ["serde/num-impls"]
num-rational = ["serde/num-rational"]
