[package]
name = "serde1"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Re-export of serde::*"
repository = "https://github.com/serde-rs/legacy"
keywords = ["serde"]
include = ["Cargo.toml", "src/lib.rs", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = { version = "1.0", default-features = false }

[features]
default = ["std"]

alloc = ["serde/alloc"]
derive = ["serde/derive"]
rc = ["serde/rc"]
std = ["serde/std"]
unstable = ["serde/unstable"]
