[package]
name = "legacy-serde"
version = "0.7.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Re-export of serde::*"
repository = "https://github.com/serde-rs/legacy"
keywords = ["serde"]
include = ["Cargo.toml", "src/lib.rs", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = { version = "0.7", default-features = false }

[features]
default = ["std"]

alloc = ["serde/alloc"]
collections = ["serde/collections"]
nightly = ["serde/nightly"]
nightly-testing = ["serde/nightly-testing"]
std = ["serde/std"]
